# hackable-app

./: build-flatpak.sh  com.endlessm.HackableApp.json.in  meson.build
data/: com.endlessm.HackableApp.data.gresource.xml  com.endlessm.HackableApp.desktop  com.endlessm.HackableApp.service.in  hackable-app-main-window.ui  meson.build
src/: com.endlessm.HackableApp.in  com.endlessm.HackableApp.src.gresource.xml  main.js  meson.build
